# safety-operator

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
benchmarks/: benchmark_safety_operator.py
examples/: minimal_wrap.py
safety_operator/: __init__.py  cli.py  config.py  operator.py  projector.py  regularizer.py  wrapper.py
tests/: __init__.py  test_safety_operator.py
